# HH_Vancy_project

./: README.md  main.py  pyproject.toml
data/: filtered_vacancies.json  test_vacancies.json  vacancies_results.json
src/: API_HH.py  Filtered_vacancy.py  Vacancy.py  user_interaction.py
tests/: test_API_HH.py  test_Filtered_vacancy.py  test_Vacancy.py  test_user_interaction.py
