[tool.poetry]
name = "project-work-with-hh"
version = "0.1.0"
description = ""
authors = ["Artyukhin Konstantin <k89161273297@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.0"
flake8 = "^7.1.0"
isort = "^5.13.2"
black = "^24.4.2"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
check_untyped_defs = true


[tool.black]
line-length = 119


[tool.isort]
line_length = 119